# python-aegis

./: .gitignore  CHANGELOG.md  CONTRIBUTING  README.md  pyproject.toml
aegis/: __init__.py  __main__.py  clients.py  command.py  datatypes.py  packages.py  reports.py  utils.py
